@@ -2272,6 +2272,24 @@ condition|(
 name|nodeProps
 operator|!=
 literal|null
+operator|&&
+name|getClusterState
+argument_list|()
+operator|.
+name|liveNodesContain
+argument_list|(
+operator|(
+name|String
+operator|)
+name|nodeProps
+operator|.
+name|get
+argument_list|(
+name|ZkStateReader
+operator|.
+name|NODE_NAME_PROP
+argument_list|)
+argument_list|)
 condition|)
 block|{
 return|return
